kubernetes/apps/networking/istio-gateway/app/authorizationpolicy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: private-by-default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
  action: DENY
  rules:
    - from:
        - source:
            notIpBlocks:
              - 143.255.31.25/32
              - 174.44.7.114/32
              - 72.235.227.218/32
              - 104.136.73.201/32
              - 204.11.161.3/32
              - 192.168.2.0/24
              - 10.0.0.0/8
      to:
        - operation:
            notHosts:
              - subtle-studio.com
              - blog.subtle-studio.com
              - www.subtle-studio.com
              - arcolog.com
              - blog.arcolog.com
              - www.arcolog.com
              - authentik.deangalvin.dev
              - filebrowser.deangalvin.dev
              - flux-webhook.deangalvin.dev
              - glimmerlabs.io
              - blog.glimmerlabs.io
              - www.glimmerlabs.io
              - hass.deangalvin.dev
              - jellyfin.deangalvin.dev
              - konflate.deangalvin.dev
              - meet.deangalvin.dev
              - musichero.deangalvin.dev
              - overseerr.deangalvin.dev
              - plex.deangalvin.dev
              - wizarr.deangalvin.dev
